# AI-Code-Review-CLI

./: .coverage  .gitignore  README.md  ai_code_review_script.code-workspace  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  review_prompt.md
.github/: copilot-instructions.md
.github/agents/: cm-developer.agent.md  cm-docs.agent.md  cm-pipeline.agent.md  cm-qa.agent.md
.github/prompts/: cm-developer.prompt.md  cm-docs.prompt.md  cm-pipeline.prompt.md  cm-qa.prompt.md
.github/workflows/: ci.yml  release.yml
docs/: cli_commands.md  flow_diagrams.md  index.md  llm_configuration.md  parameters.md
src/: __init__.py  ai_review.py  config.py  formatter.py  git_utils.py  llm_client.py  local_repo.py  prompt_utils.py  rag_engine.py  tfs_client.py  usage_tracker.py
src/prompts/: config.yaml.template  review_context.example.md  review_prompt.md.template
tests/: conftest.py  test_ai_review.py  test_config.py  test_formatter.py  test_git_utils.py  test_llm_client.py  test_local_repo.py  test_prompt_utils.py  test_rag_engine.py  test_tfs_client.py  test_usage_tracker.py
