[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-review-ai-cli"
version = "1.0.0"
description = "Automated AI-powered code review CLI for Azure DevOps / TFS Pull Requests"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["code-review", "ai", "azure-devops", "tfs", "pull-request", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "requests>=2.28.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
bedrock = ["boto3>=1.34.0"]
openai = ["openai>=1.0.0"]
gemini = ["google-generativeai>=0.3.0"]
claude = ["anthropic>=0.18.0"]
all = [
    "boto3>=1.34.0",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "anthropic>=0.18.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
ai-review = "src.ai_review:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"src" = ["prompts/**/*.md", "prompts/**/*.template"]
